--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,18 +1,31 @@
-<!DOCTYPE html>
-<html>
-     <!-- Latest compiled and minified CSS -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='sidebar.css') }}">
+<!-- jQuery library -->
+<script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='view.css') }}">
 
-    <head>
-        <title>Contacts</title>
-        {{ contactsList }}
-    </head>
+<div class="container-fluid">
+        <div class="row">
+        <!-- Sidebar column start -->
+            <div class="col-md-2">
+                <div class="btn-group-vertical" role="group">
+                    <button id="contacts" class="btn btn-primary">Contacts</button>
+                    <button class="btn btn-primary">SMS</button>
+                    <button class="btn btn-primary">Call Logs</button>
+                    <button class="btn btn-primary">Locations</button>
+                </div>
+            </div>  <!-- Sidebar column end-->
 
-
-</html>
+            <!-- Content column start -->
+            <div class="col-md-10">
+                <div id="page-content-wrapper">
+                        <div class="container-fluid">
+                                {{ contactsList }}
+                        </div>
+                </div> <!-- /#page-content-wrapper -->
+            </div>     <!-- Content column end--> 
+        </div>  <!-- Row end-->
+</div>          <!-- Container end-->
