--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='view.css') }}">
+    
 
     <head>
         
@@ -20,7 +21,7 @@
 
             <section style="margin-top:40px">
                 <div class="row justify-content-center">
-                    <div class="col-md-8" action="Content.html">
+                    <div class="col-md-8">
                         
                         <form action="{{ url_for('getPassword') }}" method="post">
                             <!-- Input fieds-->
