--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,33 +1,54 @@
-<div id="wrapper" class="toggled">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li class="sidebar-brand"> <a href="{{ url_for('readContacts') }} {{ table }}">Contacts</a> </li>
-            <li> <a href="#">SMS</a> </li>
-            <li> <a href="#">Call Logs</a> </li>
-            <li> <a href="#">Locations</a> </li>
-        </ul>
-    </div> <!-- /#sidebar-wrapper -->
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-        <div class="container-fluid">
-            <h1>Mobile Device Forensics</h1>
-            <p>Select a choice from the sidebar</p>
-        </div>
-    </div> <!-- /#page-content-wrapper -->
-</div> <!-- /#wrapper -->
-<!-- Bootstrap core JavaScript -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script> <!-- Menu Toggle Script -->
-<script>
-    $(function(){
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });    
+<!-- jQuery library -->
+<script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='view.css') }}">
+
+<div class="container-fluid">
+        <div class="row">
+        <!-- Sidebar column start -->
+            <div class="col-md-2">
+                <div class="btn-group-vertical" role="group">
+                    <button id="contacts" class="btn btn-primary">Contacts</button>
+                    <button class="btn btn-primary">SMS</button>
+                    <button class="btn btn-primary">Call Logs</button>
+                    <button class="btn btn-primary">Locations</button>
+                </div>
+            </div>  <!-- Sidebar column end-->
+
+            <!-- Content column start -->
+            <div class="col-md-10">
+                <div id="page-content-wrapper">
+                        <div class="container-fluid">
+                                <p id="contactsTable"></p>
+                        </div>
+                </div> <!-- /#page-content-wrapper -->
+            </div>     <!-- Content column end--> 
+        </div>  <!-- Row end-->
+</div>          <!-- Container end-->
+
+<script type="text/javascript">
+    $("#contacts").click(function() {
+        $.get("/getContacts", function(data, status) {
+            console.log(data)
+            // document.write(data)
+            var str = JSON.stringify(data, null, 2);
+            // $("#contactsTable").html(str)
+            
+            $.each(str, function(){
+            table.append(
+                $('<tr></tr>').append(
+                    $('<td></td>').text(this.airport_city_source),
+                    $('<td></td>').text(this.airport_city_dest),
+                    $('<td></td>').text(this.departure_date),
+                    $('<td></td>').text(this.arrival_date)
+                )
+            );
+            });
+
+        });
     });
-    
 </script>
-
-</html>
