--- a/templates/login.html
+++ b/templates/login.html
@@ -15,10 +15,8 @@
         <title>Mobile Device Forensics</title>
         <body>
            <!-- Header-->
-           <nav class="navbar navbar-expand-lg" id="titlebar">
-               <h1 class="navbar-brand mb-0">Mobile Device Forensincs</h1>
-           </nav>
-
+           {% include 'header.html' %}
+           
             <section style="margin-top:40px">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
