--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -5,50 +8,57 @@
 <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='view.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='view.css') }}">         <!-- Login page css-->
+<link rel="stylesheet" href="{{ url_for('static', filename='sidebar.css') }}">      <!-- Sidebar css-->
 
-<div class="container-fluid">
-        <div class="row">
-        <!-- Sidebar column start -->
-            <div class="col-md-2">
-                <div class="btn-group-vertical" role="group">
-                    <button id="contacts" class="btn btn-primary">Contacts</button>
-                    <button class="btn btn-primary">SMS</button>
-                    <button class="btn btn-primary">Call Logs</button>
-                    <button class="btn btn-primary">Locations</button>
-                </div>
-            </div>  <!-- Sidebar column end-->
+    <head>
+        
+        <title>Mobile Device Forensics</title>
+    </head>
 
-            <!-- Content column start -->
-            <div class="col-md-10">
-                <div id="page-content-wrapper">
-                        <div class="container-fluid">
-                                <p id="contactsTable"></p>
+    <body>
+
+        <!-- Header-->
+        {% include 'header.html' %}
+
+        <div class="container-fluid">
+                <div class="row">
+                <!-- Sidebar column start -->
+                    <div class="col-md-2">
+                        <div class="btn-group-vertical" role="group">
+                            <button id="contacts" class="btn btn-primary">Contacts</button>
+                            <button id="sms" class="btn btn-primary">SMS</button>
+                            <button id="call-logs" class="btn btn-primary">Call Logs</button>
+                            <button id= "locations" class="btn btn-primary">Locations</button>
                         </div>
-                </div> <!-- /#page-content-wrapper -->
-            </div>     <!-- Content column end--> 
-        </div>  <!-- Row end-->
-</div>          <!-- Container end-->
+                    </div>  <!-- Sidebar column end-->
 
-<script type="text/javascript">
-    $("#contacts").click(function() {
-        $.get("/getContacts", function(data, status) {
-            console.log(data)
-            // document.write(data)
-            var str = JSON.stringify(data, null, 2);
-            // $("#contactsTable").html(str)
-            
-            $.each(str, function(){
-            table.append(
-                $('<tr></tr>').append(
-                    $('<td></td>').text(this.airport_city_source),
-                    $('<td></td>').text(this.airport_city_dest),
-                    $('<td></td>').text(this.departure_date),
-                    $('<td></td>').text(this.arrival_date)
-                )
-            );
+                    <!-- Content column start -->
+                    <div class="col-md-10">
+                        <div id="page-content-wrapper">
+                                <div class="container-fluid">
+                                    <div id="contactsTable"></div>
+
+                                    <!-- <iframe src="{{ url_for('static', filename='map.html') }}"></iframe>  -->
+                                </div>
+                        </div> <!-- /#page-content-wrapper -->
+                    </div>     <!-- Content column end--> 
+                </div>  <!-- Row end-->
+        </div>          <!-- Container end-->
+
+        <script type="text/javascript" src="{{ url_for('static', filename='data.js') }}"></script>
+        <!-- <script type="text/javascript">
+            $("#call-logs").click(function() {
+                $.get("/getLogs", function(data, status) {
+                    console.log(data)
+                    // document.write(data)
+                    $("#contactsTable").html(data)
+
+                });
             });
+        </script> -->
 
-        });
-    });
-</script>
+        
+    </body>
+
+</html>
