Mount image button added

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -26,10 +26,11 @@
         <div class="row">    
             <div id="admin-sidebar" class="col-md-2 p-x-0 p-y-3">
                 <ul class="sidenav admin-sidenav list-unstyled">
-                    <li><a id="makeImage" href="#">Make Image</a></li>  <!-- Make image -->
-                    <li><a id="contacts" href="#">Contacts</a></li>     <!-- Contacts -->
-                    <li><a id="sms" href="#">SMS</a></li>               <!-- SMS-->
-                    <li><a id="call-logs" href="#">Call Logs</a></li>   <!-- Call Logs-->
+                    <li><a id="makeImage" href="#">Make Image</a></li>      <!-- Make image -->
+                    <li><a id="mountImage" href="#">Mount Image</a></li>    <!-- Mount image -->
+                    <li><a id="contacts" href="#">Contacts</a></li>         <!-- Contacts -->
+                    <li><a id="sms" href="#">SMS</a></li>                   <!-- SMS-->
+                    <li><a id="call-logs" href="#">Call Logs</a></li>       <!-- Call Logs-->
                     <!-- Locations dropdown start -->
                     <li>
                         <!-- Main locations button -->
