Adding Whatsapp & Facebook content to the Frontend UI

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -31,6 +31,13 @@
                     <li><a id="contacts" href="#">Contacts</a></li>         <!-- Contacts -->
                     <li><a id="sms" href="#">SMS</a></li>                   <!-- SMS-->
                     <li><a id="call-logs" href="#">Call Logs</a></li>       <!-- Call Logs-->
+                    <li><a id="facebookprofile" href="#">Facebook Profile</a></li>       <!-- Facebook Profile-->
+                    <li><a id="facebookcontacts" href="#">Facebook Contacts</a></li>       <!-- Facebook Contacts-->
+                    <li><a id="whatsappcontacts" href="#">Whatsapp Contacts</a></li>       <!-- Whatsapp Contacts-->
+                    <li><a id="whatsappmessages" href="#">Whatsapp Messages</a></li>       <!-- Whatsapp Messages-->
+                    <li><a id="whatsappgroups" href="#">Whatsapp Groups</a></li>       <!-- Whatsapp Groups-->
+
+
                     <!-- Locations dropdown start -->
                     <li>
                         <!-- Main locations button -->
