Added Synced Contacts, Device Info with the UI

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -26,6 +26,8 @@
         <div class="row">    
             <div id="admin-sidebar" class="col-md-2 p-x-0 p-y-3">
                 <ul class="sidenav admin-sidenav list-unstyled">
+                    <li><a id="deviceinfo" href="#">Device Inforation</a></li>      <!-- Device Inforation -->
+                    <li><a id="syncaccounts" href="#">Synced Accounts</a></li>      <!-- Synced Accounts -->
                     <li><a id="makeImage" href="#">Make Image</a></li>      <!-- Make image -->
                     <li><a id="mountImage" href="#">Mount Image</a></li>    <!-- Mount image -->
                     <li><a id="contacts" href="#">Contacts</a></li>         <!-- Contacts -->
