Dropdowns for facebook and whatsapp

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -33,12 +33,41 @@
                     <li><a id="contacts" href="#">Contacts</a></li>         <!-- Contacts -->
                     <li><a id="sms" href="#">SMS</a></li>                   <!-- SMS-->
                     <li><a id="call-logs" href="#">Call Logs</a></li>       <!-- Call Logs-->
-                    <li><a id="facebookprofile" href="#">Facebook Profile</a></li>       <!-- Facebook Profile-->
-                    <li><a id="facebookcontacts" href="#">Facebook Contacts</a></li>       <!-- Facebook Contacts-->
-                    <li><a id="whatsappcontacts" href="#">Whatsapp Contacts</a></li>       <!-- Whatsapp Contacts-->
-                    <li><a id="whatsappmessages" href="#">Whatsapp Messages</a></li>       <!-- Whatsapp Messages-->
-                    <li><a id="whatsappgroups" href="#">Whatsapp Groups</a></li>       <!-- Whatsapp Groups-->
 
+                    <!-- Facebook dropdown start -->
+                    <li>
+                        <!-- Main facebook button -->
+                        <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#facebook">
+                            <span class="sidebar-icon"></span>
+                            <span class="sidebar-title">Facebook</span>
+                            <b class="caret"></b>
+                        </a>
+                        <!-- Sub-menu -->
+                        <ul id="facebook" class="panel-collapse collapse panel-switch" role="menu">
+                            <!-- Sub-buttons -->
+                            <li><a id="facebookprofile" href="#"><i class="fa fa-caret-right"></i>Profile</a></li>      <!-- Facebook profile-->
+                            <li><a id="facebookcontacts" href="#"><i class="fa fa-caret-right"></i>Contacts</a></li>    <!-- Facebook contacts-->
+                        </ul>
+                    </li>
+                    <!-- Facebook dropdown end  -->
+
+                    <!-- Whatsapp dropdown start -->
+                    <li>
+                        <!-- Main whatsapp button -->
+                        <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#whatsapp">
+                            <span class="sidebar-icon"></span>
+                            <span class="sidebar-title">Whatsapp</span>
+                            <b class="caret"></b>
+                        </a>
+                        <!-- Sub-menu -->
+                        <ul id="whatsapp" class="panel-collapse collapse panel-switch" role="menu">
+                            <!-- Sub-buttons -->
+                            <li><a id="whatsappcontacts" href="#"><i class="fa fa-caret-right"></i>Contacts</a></li>    <!-- Whatsapp contacts-->
+                            <li><a id="whatsappmessages" href="#"><i class="fa fa-caret-right"></i>Messages</a></li>    <!-- Whatsapp messages-->
+                            <li><a id="whatsappgroups" href="#"><i class="fa fa-caret-right"></i>Groups</a></li>        <!-- Whatsapp groups-->
+                        </ul>
+                    </li>
+                    <!-- Facebook dropdown end  -->
 
                     <!-- Locations dropdown start -->
                     <li>
