--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -85,6 +85,9 @@
                         </ul>
                     </li>
                     <!-- Locations dropdown end  -->
+
+                    <li><a id="audio" href="#">Audio Files</a></li>       <!-- Audio Files -->
+
                 </ul>
             </div> <!-- /#admin-sidebar end -->
             <!-- Div for spacing -->
