Audio files table added

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -98,6 +98,13 @@
 
                 <!-- Progress bar end -->
                 <div id="contactsTable"></div>      <!-- This gets replaced with data from javascript -->
+                <table class="table table-striped table-bordered table-hover table-condensed" id="table_div">
+                    <thead>
+                        <tr>
+                            <th>File</th>
+                        </tr>
+                    </thead>
+                </table>
             </div> <!-- /#admin-main-control -->
         </div> <!-- /.row -->
     </div> <!-- /.container-fluid -->
