Videos, documents, pictures

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -87,6 +87,9 @@
                     <!-- Locations dropdown end  -->
 
                     <li><a id="audio" href="#">Audio Files</a></li>       <!-- Audio Files -->
+                    <li><a id="video" href="#">Video Files</a></li>       <!-- Video Files -->
+                    <li><a id="documents" href="#">Documents</a></li>       <!-- Documents -->
+                    <li><a id="pictures" href="#">Pictures</a></li>       <!-- Pictures -->
 
                 </ul>
             </div> <!-- /#admin-sidebar end -->
