Skype contacts, messages added

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -67,7 +67,24 @@
                             <li><a id="whatsappgroups" href="#"><i class="fa fa-caret-right"></i>Groups</a></li>        <!-- Whatsapp groups-->
                         </ul>
                     </li>
-                    <!-- Facebook dropdown end  -->
+                    <!-- Whatsapp dropdown end  -->
+
+                    <!-- Skype dropdown start -->
+                    <li>
+                        <!-- Main locations button -->
+                        <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#submenu-2">
+                            <span class="sidebar-icon"></span>
+                            <span class="sidebar-title">Skype</span>
+                            <b class="caret"></b>
+                        </a>
+                        <!-- Sub-menu -->
+                        <ul id="submenu-2" class="panel-collapse collapse panel-switch" role="menu">
+                            <!-- Sub-buttons -->
+                            <li><a id="skypeContacts" href="#"><i class="fa fa-caret-right"></i>Contacts</a></li>
+                            <li><a id="skypeMessages" href="#"><i class="fa fa-caret-right"></i>Messages</a></li>
+                        </ul>
+                    </li>
+                    <!-- Skype dropdown end  -->
 
                     <!-- Locations dropdown start -->
                     <li>
