Adding Chrome functions to the backend and frontend

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -90,7 +90,25 @@
                     <li><a id="video" href="#">Video Files</a></li>       <!-- Video Files -->
                     <li><a id="documents" href="#">Documents</a></li>       <!-- Documents -->
                     <li><a id="pictures" href="#">Pictures</a></li>       <!-- Pictures -->
+                    <!-- Chrome dropdown start -->
+                    <li>
+                        <!-- Main Chrome button -->
+                        <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#chrome">
+                            <span class="sidebar-icon"></span>
+                            <span class="sidebar-title">Google Chrome</span>
+                            <b class="caret"></b>
+                        </a>
+                        <!-- Sub-menu -->
+                        <ul id="chrome" class="panel-collapse collapse panel-switch" role="menu">
+                            <!-- Sub-buttons -->
+                            <li><a id="bookmarks" href="#"><i class="fa fa-caret-right"></i>Bookmarks</a></li>      <!-- Chrome Bookmarks-->
+                            <li><a id="login" href="#"><i class="fa fa-caret-right"></i>Login Data</a></li>      <!-- Chrome Login-->
+                            <li><a id="history" href="#"><i class="fa fa-caret-right"></i>Browser History</a></li>      <!-- Chrome Brwoser History-->
+                            <li><a id="webdata" href="#"><i class="fa fa-caret-right"></i>Web Data</a></li>      <!-- Chrome Web Data-->
 
+                        </ul>
+                    </li>
+                    <!-- Chrome dropdown end  -->
                 </ul>
             </div> <!-- /#admin-sidebar end -->
             <!-- Div for spacing -->
