Dropdown issue fixed

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -72,13 +72,13 @@
                     <!-- Skype dropdown start -->
                     <li>
                         <!-- Main locations button -->
-                        <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#submenu-2">
+                        <a class="accordion-toggle collapsed toggle-switch" data-toggle="collapse" href="#submenu-skype">
                             <span class="sidebar-icon"></span>
                             <span class="sidebar-title">Skype</span>
                             <b class="caret"></b>
                         </a>
                         <!-- Sub-menu -->
-                        <ul id="submenu-2" class="panel-collapse collapse panel-switch" role="menu">
+                        <ul id="submenu-skype" class="panel-collapse collapse panel-switch" role="menu">
                             <!-- Sub-buttons -->
                             <li><a id="skypeContacts" href="#"><i class="fa fa-caret-right"></i>Contacts</a></li>
                             <li><a id="skypeMessages" href="#"><i class="fa fa-caret-right"></i>Messages</a></li>
