--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -126,6 +126,10 @@
                         </ul>
                     </li>
                     <!-- Chrome dropdown end  -->
+                    
+                                    
+                    <li><a id="imagelocations" href="#"><i class="fa fa-caret-right"></i>Image Locations</a></li>
+		            <li><a id="metadata" href="#"><i class="fa fa-caret-right"></i>Image Metadata</a></li>
                 </ul>
             </div> <!-- /#admin-sidebar end -->
             <!-- Div for spacing -->
