--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='view.css') }}">
     
+     <!-- Place fav_nccs.png in the root directory -->
+    <link rel="apple-touch-icon" href="images/fav_nccs.png">
+    <link rel="shortcut icon" type="image/ico" href="images/fav_nccs.png" />
 
     <head>
         
