--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -30,6 +30,7 @@
                     <li><a id="syncaccounts" href="#">Synced Accounts</a></li>      <!-- Synced Accounts -->
                     <li><a id="makeImage" href="#">Make Image</a></li>      <!-- Make image -->
                     <li><a id="mountImage" href="#">Mount Image</a></li>    <!-- Mount image -->
+	            <li><a id="getBackupRestore" href="#">Backup and Restore</a></li>      <!-- backup and restore -->
                     <li><a id="contacts" href="#">Contacts</a></li>         <!-- Contacts -->
                     <li><a id="sms" href="#">SMS</a></li>                   <!-- SMS-->
                     <li><a id="call-logs" href="#">Call Logs</a></li>       <!-- Call Logs-->
